<resources>
    <string name="app_name">SoundMe</string>

    <!--HomeFragment-->
    <string name="top_chart">TOP CHART</string>
    <string name="popular_albums">POPULAR ALBUMS</string>
    <string name="best_of_artists">BEST OF ARTISTS</string>

    <!--Settings-->
    <string name="settings">SETTINGS</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="isDarkTheme">isDarkTheme</string>
    <string name="isEnglish">isEnglish</string>

    <!--BottomNavigationIcon-->
    <string name="discover_menu">Discover</string>
    <string name="search_menu">Search</string>
    <string name="library_menu">Library</string>

    <!--SearchFragment-->
    <string name="artist_songs_or_album">Artist, songs or playlist</string>
    <string name="random_artist">RANDOM ARTISTS</string>
    <string name="random_songs">RANDOM SONGS</string>
    <string name="search">Search</string>

    <!--LibraryActivity-->
    <string name="library_header">LIBRARY</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="liked_songs_uppercase">LIKED SONGS</string>
    <string name="create_new_playlist">Create new playlist</string>

    <!--LyricFragment-->
    <string name="song_lyric">Song: </string>
    <string name="artist">Artist: </string>
    <string name="fake_lyric">Nơi tin yêu nhiệm màu\n
Từng nụ hôn trao như tình đầu\n
Anh đưa tay nguyện cầu\n
Gửi về em tiếng ca chân thành.\n
(rất chân thành)\n
Xa, em như cây lìa cành\n
Thương, em nắng mưa cũng đành\n
Dù chỉ là ngày chờ đêm trông\n
Baby can you feel me?\n
\n
Có ước muốn thân ta tan theo gió\n
Kéo bước theo anh rong chơi\n
Có ước muốn ngôi sao trong đêm tối\n
Rẽ lối bên anh khắp nơi\n
Có ước muốn\n
Anh chôn sâu\n
Những nỗi nhớ\n
Tan đi đâu\n
Tàn theo những giấc mơ hững hờ\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n
I see you there, I see you everywhere\n
In my mind even in my dreams\n
Who loves you, sorry i dont care\n
Cause I know who is in your heart.\n
Chim muông bay, tìm ngọt ngào từ mưa giông\n
Cho đêm nay, đừng dài hơn những nhớ mong\n
Giữ lấy ngón tay đan vào nhau, ai biết mai về sau,\n
anh với em còn không?\n
Có ước muốn thân ta tan theo gió\n
Kéo bước theo anh rong chơi\n
Có ước muốn ngôi sao trong đêm tối\n
Rẽ lối bên anh khắp nơi\n
Có ước muốn\n
Anh chôn sâu\n
Những nỗi nhớ\n
Tan đi đâu\n
Tàn theo những giấc mơ hững hờ\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n
\n
Đã có anh cần gì hơn\n
Đã có em cần gì hơn\n
Đã có nhau ta cần gì hơn?\n
..... x2\n
(Cần gì hơn khi đã có em\n
Cần gì hơn, babe\n
Cần gì hơn) x 4\n</string>

    <!--DetailFragment-->
    <string name="song_detail">Song</string>
    <string name="album_detail">Album</string>
    <string name="artist_detail">Artist</string>
    <string name="genre_detail">Genre</string>
    <string name="composer_detail">Composer</string>
    <string name="similar_songs">SIMILAR SONGS</string>
    <string name="play">PLAY</string>
    <string name="shuffle_play">SHUFFLE PLAY</string>

    <!--SearchActivity-->
    <string name="search_here">Search here</string>
    <string name="artists">ARTISTS</string>
    <string name="songs">SONGS</string>

    <!--More-->
    <string name="add_to_liked_songs">Add to liked songs</string>
    <string name="add_all_to_library">Add all to library</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_all_to_playlist">Add all to playlist</string>
    <string name="download">Download</string>
    <string name="download_playlist">Select songs to download</string>
    <string name="play_as_broadcast">Play as Broadcast</string>
    <string name="name_here">Name here</string>
    <string name="songs_playlist"> songs</string>
    <string name="this_playlist_is_empty">This playlist is empty.</string>
    <string name="your_results_will_be_shown_here">Your results will be shown here.</string>
    <string name="found_0_result">Found 0 result.</string>
    <string name="songs_library"> songs</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="do_you_want_to_sign_out">Do you want to sign out?</string>
    <string name="delete_this_playlist">Delete this playlist</string>
    <string name="confirm_delete_playlist">Do you want to delete this playlist?</string>
    <string name="delete">Delete</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_artist">Artist</string>

    <string name="menu_all_songs">All Songs</string>
    <string name="menu_popular_songs">Popular Songs</string>
    <string name="menu_favorite_songs">Favorite Songs</string>

    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact</string>

    <string name="menu_change_password">Change password</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="feedback_name">Full name (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Phone number</string>
    <string name="feedback_comment">Comment (*)</string>
    <string name="send_feedback">Send Feedback</string>

    <string name="play_all">Play all</string>
    <string name="view_all">View all</string>
    <string name="music_player">Music Player</string>
    <string name="views">Views</string>
    <string name="label_start_time">00:00</string>
    <string name="label_search">Search</string>
    <string name="title_download">Download</string>
    <string name="message_download">Download song…</string>
    <string name="label_prioritized">Prioritized</string>

    <string name="option_download">Download song</string>
    <string name="option_priority">Priority</string>
    <string name="option_add_playlist">Add to playlist</string>
    <string name="option_remove_playlist">Remove from playlist</string>
    <string name="option_view_artist">View artist</string>
    <string name="option_view_category">View category</string>

    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    // Validate
    <string name="name_require">Please enter your name</string>
    <string name="comment_require">Please enter your comment</string>

    // Hint
    <string name="hint_search_name">Song name…</string>

    // Label
    <string name="label_artist">Artist:</string>
    <string name="label_listen">listen</string>
    <string name="label_listens">listens</string>

    // Message
    <string name="msg_please_waiting">Please wait…</string>
    <string name="msg_send_feedback_success">Send feedback successfully!</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="msg_get_date_error">General error, please try again later</string>

    // Module user
    <string name="hint_email">Email…</string>
    <string name="hint_password">Password…</string>
    <string name="hint_password_old">Old password…</string>
    <string name="hint_password_new">New password…</string>
    <string name="hint_password_confirm">Confirm new password…</string>

    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="have_not_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change password</string>
<!--    <string name="sign_out">Sign Out</string>-->
    <string name="reset_password">Reset password</string>

    <string name="msg_email_require">Please enter your email</string>
    <string name="msg_password_require">Please enter your password</string>
    <string name="msg_email_invalid">Your email is invalid</string>

    <string name="msg_old_password_require">Please enter old password</string>
    <string name="msg_new_password_require">Please enter new password</string>
    <string name="msg_confirm_password_require">Please enter confirm new password</string>
    <string name="msg_old_password_invalid">Old password is incorrect</string>
    <string name="msg_confirm_password_invalid">Confirm new password does not match</string>
    <string name="msg_new_password_invalid">The new password is the same as the old password</string>

    <string name="msg_change_password_successfully">Change password successfully</string>
    <string name="msg_reset_password_successfully">Password reset is successful, please check your email</string>

    <string name="msg_sign_up_error">Registration failed, please try again</string>
    <string name="msg_sign_in_error">Login failed, please try again</string>
    <string name="msg_permission_denied">Permission Denied</string>
    <string name="msg_add_song_playlist_success">Add song to playlist successfully</string>
    <string name="msg_song_exists_in_playlist">The song already exists in the playlist</string>
    <string name="msg_song_playing">The song is playing</string>
    <string name="msg_setting_priority_successfully">Setting priority successfully</string>
    <string name="msg_confirm_delete">Are you sure you want to delete this item?</string>
    <string name="msg_cannot_delete_song">Cannot delete currently playing song from playlist</string>
    <string name="msg_delete_song_from_playlist_success">Delete song from playlist successfully</string>
</resources>