<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentSearch"
    android:background="@color/colorDark1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimenPaddingBottomEnd">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/search"
                android:textSize="40sp"
                android:textColor="@color/colorLight1"
                android:textStyle="bold"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"/>

            <FrameLayout
                android:id="@+id/search_frame"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:background="@drawable/search_background"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="28dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edt_search_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_shape_border_red_corner_8"
                        android:hint="@string/hint_search_name"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:padding="@dimen/define_dimen_12"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_xsmall"
                        tools:ignore="Autofill" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/define_dimen_35"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/img_search"
                        android:background="@color/black" />

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/define_dimen_5"
                        android:padding="@dimen/define_dimen_5"
                        android:src="@drawable/ic_search_red"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/random_songs"
                style="@style/ListHeader"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_marginBottom="@dimen/define_dimen_10" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>