<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentLyric">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/song_singer_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:id="@+id/song_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtSongTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song_lyric"
                        style="@style/LyricTitle" />

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="songName"
                        style="@style/LyricTitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/song_frame">

                    <TextView
                        android:id="@+id/txtSingerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist"
                        style="@style/LyricTitle"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/song_frame" />

                    <TextView
                        android:id="@+id/txtArtist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="singerName"
                        style="@style/LyricTitle"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/song_frame" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtLyric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/song_singer_frame"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:lineSpacingExtra="20dp"
                android:text="@string/fake_lyric"
                android:textAlignment="center"
                style="@style/LyricStyle"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/top_gradient_frame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/lyric_hidden_top_gradient_dark" />

    <FrameLayout
        android:id="@+id/bottom_gradient_frame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/lyric_hidden_bottom_gradient_dark" />

</RelativeLayout>