<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.TrackMoreFragment"
    android:id="@+id/root_view"
    style="@style/AppModalStyle"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.example.soundme.views.RoundImageView
            android:id="@+id/imgCover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@color/colorLight5"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"

            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/imgCover"
            app:layout_constraintLeft_toRightOf="@id/imgCover"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgCover">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="title"
                android:textColor="@color/colorLight1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="artist"
                android:textColor="@color/colorLight5"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_to_library_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgLibrary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_not_favourite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_liked_songs"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgLibrary"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_to_playlist_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgPlaylist"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_playlist"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgPlaylist"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/download_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imgDownload"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgDownload"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgBroadcast"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_broadcast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBroadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_as_broadcast"
            android:textColor="@color/colorLight1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgBroadcast"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>